--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -9,3 +9,6 @@ $color-fondo-index: #f6be6a;
 
 /*color pedidos precio y fondo*/
 $color-precio:#7fba9f;
+
+/*color complementario precio */
+$color-sabores:#fdfd96;
