--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -109,6 +109,7 @@ h2{
             width:100%;
             display: flex;
             flex-direction: column;
+            object-fit: cover;
             div{
                 margin: 10px 0px ;
                 a{
@@ -117,6 +118,7 @@ h2{
                     }
                 }
             }
+            
             div{
                 p{
                     margin: 5px;
@@ -316,6 +318,12 @@ footer{
                         box-shadow: 0px 0px 0px 10px $color-fondo-index;
                     }
                 }
+        }
+        .alfajor-item{
+            grid-column: 4/3;
+        }
+        .crepe-item{
+            grid-column: 2/3;
         }
 }
 
