--- a/scss/paginas/_sabores.scss
+++ b/scss/paginas/_sabores.scss
@@ -4,17 +4,21 @@
 
 //titulo sabor
 .titulo-sabores{
-    width: 80%;
+    width: 100%;
+    height: 200px;
     margin: auto;
-    margin-top: 50px;
+    margin-bottom: 100px;
     text-align: center;
+    background-color: $color-precio;
         h2{
-            font-size: 60px;
+            font-size: 50px;
             font-family: "DM Serif Display", serif;
             font-weight: 400;
             font-style: normal;
-            margin-bottom: 100px;
-            text-shadow: 15px 20px 10px $color-nav  ;
+            padding: 50px 10px 30px 10px;
+            text-shadow: 2px 5px 10px $color-principal  ;
+            color: $color-principal;
+
         }
         .animate__pulse:hover{
             animation-duration: 2s ;
@@ -38,17 +42,11 @@
                         margin: auto;
                             img{
                                 width: 100%;
+                                border-radius: 120px;
                             }
                     }
             }
-        .sabores-helado:hover{
-            width: 70%;
-            box-shadow: 1px 15px 37px $color-nav;
-                h2{
-                    font-size: 35px;
-                }
-            
-       }
+
 
 }
 
@@ -67,12 +65,7 @@
                        
                         
                 }
-                .sabores-helado:hover{
-                    width: 100%; 
-                        h3{
-                            font-size: 30px;
-                        }
-                }
+            
         }
 
     
