--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -12,3 +12,10 @@ $color-precio:#7fba9f;
 
 /*color complementario precio */
 $color-sabores:#fdfd96;
+
+/*color del auto */
+$color-auto:#a3660c;
+
+//font boton js boton-carrito
+ 
+     
