--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -36,6 +36,7 @@ h2{
                     font-size: 40px;
                     margin-top: 0px;
                     text-shadow: none;
+                    text-align: center;
                 }
             }
 }
@@ -69,14 +70,15 @@ h2{
             .tarrinas-img, .copas-img{
                     width: 100%;
                     object-fit: cover;
-                    height: 70vh;
+                    img{
+                        width: 100%;
+                        height: 60vh;
+                        margin-bottom: 30px;
+                    }
+                 
             }
      
-            img{
-                width: 100%;
-                height: 60vh;
-                margin-bottom: 30px;
-            }
+           
             h4{
                 font-size: 30px;
             }
@@ -120,16 +122,46 @@ h2{
             }
             
             div{
+                display: flex;
+                flex-direction: column;
                 p{
                     margin: 5px;
-                    font-size: 23px;
+                    font-size: 16px;
                     color: $color-nav;
+                    font-family: "Playwrite NG Modern", cursive;
+                    font-optical-sizing: auto;
+                    font-weight:weight;
+                    font-style: normal;
                 }
                 .estilo-precio{
                     color: $color-precio;
                     font-size: 20px;
                 }
+                .boton-carrito{
+                    background-color: $color-principal;
+                    border: 1px $color-auto solid;
+                    padding: 3px;
+                    font-family: "Playwrite NG Modern", cursive;
+                    font-optical-sizing: auto;
+                    font-weight:weight;
+                    font-style: normal;
+                    font-size: 13px;
+                    text-align: center;
+                    align-self: center;
+                    margin: 10px;
+                    width: 50%;
+                }
+                .boton-carrito:hover {
+                    background-color: $color-nav;
+                    color: $color-principal;
+                }
+                .boton-carrito:active {
+                    background-color: $color-nav;
+                    box-shadow: 0 5px #666;
+                    transform: translateY(4px);
+                  }
             }
+          
         }
 
 }
@@ -144,11 +176,14 @@ h2{
         .postre-item{
             width: 100%;
             div{
+                display: flex;
+                flex-direction: column;
                 h3{
-                    font-size: 30px;
+                    font-size: 13px;
                     margin:30px 0px;
-                    font-family: "Lobster", sans-serif;
-                    font-weight: 400;
+                    font-family: "Playwrite NG Modern", cursive;
+                    font-optical-sizing: auto;
+                    font-weight:weight;
                     font-style: normal;
                 }
                 p{
@@ -159,6 +194,20 @@ h2{
                 img{
                     width: 100%;
                     border-radius: 170px;
+                }
+                .boton-carrito{
+                    background-color: $color-principal;
+                    border: 1px $color-auto solid;
+                    padding: 3px;
+                    font-family: "Playwrite NG Modern", cursive;
+                    font-optical-sizing: auto;
+                    font-weight:weight;
+                    font-style: normal;
+                    font-size: 13px;
+                    text-align: center;
+                    align-self: center;
+                    margin: 10px;
+                    width: 50%;
                 }
             }
         }
@@ -327,4 +376,156 @@ footer{
         }
 }
 
+}
+
+
+
+#contenedor-carrito{
+    background-color: $color-nav;
+    height: 100% !important;
+    width: 500px !important;
+    position: absolute; 
+    right: 0px;
+    margin: 20px 0px;
+    padding: 0px;
+    display: none;
+    flex-direction: column;
+    box-shadow: 100px 100px 100px$color-nav;
+    
+        div{
+            background-color: $color-nav;
+            padding: 5px;
+        }
+        .caja-producto{
+            border-bottom: 1px $color-precio solid;
+            height: 10%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            height: 200px;
+            background-color: $color-nav;
+            
+                .img-carrito{
+                    width: 30%;
+                    
+                        img{
+                            width: 90%;
+                            border-radius: 50%;
+                        }
+                }
+                h4{
+                    font-size: 15px ;
+                }
+                p{
+                    color: $color-principal;
+                    // margin-right: 15px;
+                }
+                button{
+                    width: 30px;
+                    height: 30px;
+                    background-color: $color-precio;
+                    color: $color-principal;
+                    border-radius: 50%;
+                    
+                }
+                .caja-botones-productos{
+                    display: flex;
+                        button{
+                            margin: 5px;
+                        }
+                }
+        }
+        div{
+            display: flex;
+            .terminar-compra{
+                width: 40%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: auto;
+                background-color: $color-nav;
+                color: $color-principal;
+                border: 1px solid $color-precio;
+            }
+            .limpiar-carrito{
+                width: 40%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: auto;
+                background-color: $color-nav;
+                color: $color-principal;
+                border: 1px solid $color-precio;
+            }
+        }
+
+}
+
+
+.carrito-none{
+display: flex !important;
+}
+.total-carrito{
+    color: $color-principal;
+    background-color: $color-nav;
+    font-size: 19px;
+    margin: 10px;
+}
+
+#carrito-flotante{
+    position: fixed;
+    min-height: 117px;
+
+  //  word-wrap: break-word;
+    width: 500px;
+    margin-left: 40%;
+    margin-top: -200px;
+    display: none;
+    flex-direction: column;
+    align-items: start;
+    background-color: $color-nav;
+    padding: 10px;
+            h4{
+                color: $color-principal;
+                font-family: "Playwrite NG Modern", cursive;
+                font-optical-sizing: auto;
+                font-weight:weight;
+                font-style: normal;
+                font-size: 20px;
+                text-align: center;
+            }
+            .cont-carrito-final{
+                display: flex;
+                margin: 10px;
+                justify-content: space-around;
+                border: 1px $color-precio solid;
+                padding: 10px;
+                
+                    .img-carrito{
+                        width: 30%;
+                            img{
+                                width: 100%;
+                            }
+                        }
+
+                    div{
+                        display: flex;
+                        flex-direction: column;
+                        color: $color-principal;
+                            p{
+                                color: $color-precio;
+                                font-size: 20px;
+                            }
+                    }
+            }
+
+}
+
+.boton-carrito-final{
+    button{
+        border-radius: 50%;
+        background-color: $color-precio;
+        width: 20px;
+    }
 }
