--- a/css/estilos.css
+++ b/css/estilos.css
@@ -629,7 +629,6 @@ footer .cont-footer .foot-info ul li a {
   padding: 0px;
   display: none;
   flex-direction: column;
-  box-shadow: 100px 100px 100px #2B2B2B;
 }
 #contenedor-carrito div {
   background-color: #2B2B2B;
@@ -706,54 +705,41 @@ footer .cont-footer .foot-info ul li a {
   margin: 10px;
 }
 
-#carrito-flotante {
-  position: fixed;
-  min-height: 117px;
-  width: 500px;
-  margin-left: 40%;
-  margin-top: -200px;
+.modal-prin {
   display: none;
-  flex-direction: column;
-  align-items: start;
-  background-color: #2B2B2B;
-  padding: 10px;
-}
-#carrito-flotante h4 {
-  color: white;
-  font-family: "Playwrite NG Modern", cursive;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
-  font-size: 20px;
-  text-align: center;
-}
-#carrito-flotante .cont-carrito-final {
-  display: flex;
-  margin: 10px;
-  justify-content: space-around;
-  border: 1px #7fba9f solid;
-  padding: 10px;
-}
-#carrito-flotante .cont-carrito-final .img-carrito {
-  width: 30%;
-}
-#carrito-flotante .cont-carrito-final .img-carrito img {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin-top: 20%;
   width: 100%;
+  height: 100%;
+  overflow: auto;
 }
-#carrito-flotante .cont-carrito-final div {
-  display: flex;
-  flex-direction: column;
+.modal-prin .modal-cont {
+  background-color: #2B2B2B;
+  margin: auto;
+  padding: 10px;
+  border: 1px solid #7fba9f;
+  width: 60%;
+  height: 20%;
+}
+.modal-prin .modal-cont .boton-modal {
+  background-color: #7fba9f;
+  float: right;
+  width: 20px;
+  border-radius: 50%;
+}
+.modal-prin .modal-cont h5 {
   color: white;
-}
-#carrito-flotante .cont-carrito-final div p {
-  color: #7fba9f;
-  font-size: 20px;
+  text-align: center;
+  margin-top: 7%;
+  font-size: 30px;
 }
 
-.boton-carrito-final button {
-  border-radius: 50%;
-  background-color: #7fba9f;
-  width: 20px;
+.mostrar-modal {
+  display: block;
 }
 
 /*color principal body */
