--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -390,7 +390,6 @@ footer{
     padding: 0px;
     display: none;
     flex-direction: column;
-    box-shadow: 100px 100px 100px$color-nav;
     
         div{
             background-color: $color-nav;
@@ -473,4 +472,39 @@ display: flex !important;
     margin: 10px;
 }
 
+.modal-prin{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin-top: 20%;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+        .modal-cont{
+           background-color: $color-nav;
+           margin: auto;
+           padding: 10px;
+           border: 1px solid $color-precio;
+           width: 60%;
+           height: 20%;
+             .boton-modal{
+                    background-color: $color-precio;
+                    float: right;
+                    width: 20px;
+                    border-radius: 50%;
+                }
+                h5{
+                    color: white;
+                    text-align: center;
+                    margin-top: 7%;
+                    font-size: 30px;
+                }
+        }
+}
 
+.mostrar-modal{
+    display: block;
+}
