--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -12,6 +12,8 @@
 
 //AYUDA
 @import "./paginas/sabores";
+//Tarrinas
+@import "./paginas/tarrinas.scss";
 
 
 //estilos generales 
@@ -47,16 +49,17 @@ header{
                                 width: 10%;
                                 padding-left: 10px;
                                 margin-right: 0px;
-                                margin-left: 30px;
+                                margin-left: 0px;
                                 position:static;
                                         .num-carrito{
                                             color: $color-principal;
                                             position: absolute;
-                                            top: 0rem;
+                                            top: 5px;
                                             align-items: center;
                                             text-align: center;
-                                            right: 55px;
+                                            right: 50px;
                                             width: 30px;
+                                            height: 27px;
                                             border-radius: 50%;
                                             background-color: $color-precio;
                                         }
@@ -87,6 +90,7 @@ header{
                             }
                             ul.navbar-nav {
                                 width: 100% !important;
+                            
                             }
 
                 }
@@ -507,7 +511,9 @@ footer{
     
     header nav ul {
         width: 100%;
-        font-size: 1rem;
+        font-size: 14px;
+        justify-content: center;
+      
     }
     /*Carrusel */
 .carousel-item img {
