--- a/scss/paginas/_pedidos.scss
+++ b/scss/paginas/_pedidos.scss
@@ -100,7 +100,7 @@ h2{
                 font-size: 40px;
             }
         }
-    .batidos-smooties{
+    #batidos-smooties{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     grid-template-rows: repeat(7,1fr);
@@ -167,7 +167,7 @@ h2{
 }
 }
 
-.tartas-postres{
+#tartas-postres{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     grid-template-rows: repeat(18,1fr);
@@ -288,7 +288,7 @@ footer{
 
     .contenedor-batidos{
         margin: 10px !important;
-        .batidos-smooties{
+        #batidos-smooties{
             grid-template-columns: repeat(3, 1fr) !important;
             grid-template-rows: repeat(3,1fr) !important;
         }
@@ -297,7 +297,7 @@ footer{
 
     /*TARTAS Y POSTRES*/
 
-    .tartas-postres{
+    #tartas-postres{
         grid-template-columns: repeat(3,1fr);
         grid-template-rows: repeat(6,1fr);
             .postre-item{
@@ -351,14 +351,14 @@ footer{
                 margin-bottom: 70px;
             }
         }
-    .batidos-smooties{
+    #batidos-smooties{
         grid-template-columns: repeat(4,1fr) !important;
         grid-template-rows: repeat(2,1fr) !important;
             
      }
 }
 //tartas y postres 
-.tartas-postres{
+#tartas-postres{
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: repeat(5,1fr);
         .postre-item{
@@ -382,14 +382,15 @@ footer{
 
 #contenedor-carrito{
     background-color: $color-nav;
-    height: 100% !important;
     width: 500px !important;
+    height: 100%;
     position: absolute; 
     right: 0px;
     margin: 20px 0px;
     padding: 0px;
     display: none;
     flex-direction: column;
+    transition-timing-function: ease;
     
         div{
             background-color: $color-nav;
@@ -465,6 +466,7 @@ footer{
 .carrito-none{
 display: flex !important;
 }
+
 .total-carrito{
     color: $color-principal;
     background-color: $color-nav;
@@ -507,4 +509,5 @@ display: flex !important;
 
 .mostrar-modal{
     display: block;
+    transition: height 2s ;
 }
