--- a/scss/paginas/tarrinas.scss
+++ b/scss/paginas/tarrinas.scss
@@ -41,3 +41,18 @@
     flex-direction: column;
     transition-timing-function: ease;
 }
+
+.caja-producto{
+    .sabores{
+        display: flex;
+        flex-direction: column;
+            h4{
+                font-size: 20px !important;
+            }
+            #sabores-nuevos{
+               list-style:circle;
+               font-size: 13px;
+             
+            }
+    }
+}
